// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Not found raised when the address doesn't exist (with authedUser) should match the snapshot 1`] = `
<div>
  <div />
  <div>
    <nav
      class="navbar navbar-expand-lg bg-primary"
      data-testid="menu"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand link-light"
          href="/"
        >
          Employee Polls
        </a>
        <div
          class="collapse navbar-collapse"
          id="navbarText"
        >
          <ul
            class="navbar-nav me-auto mb-2 mb-lg-0"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link active link-light"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link link-light"
                href="/leaderboard"
              >
                Leaderboard
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link link-light"
                href="/add"
              >
                Add question
              </a>
            </li>
          </ul>
          <ul
            class="navbar-nav mb-2 mb-lg-0"
          >
            <li
              class="nav-item"
            >
              <span
                class="nav-link link-light"
              >
                <div
                  class="avatar"
                >
                  <img
                    alt="Avatar"
                    class="avatar"
                    src="/assets/avatar_1.jpg"
                  />
                </div>
                Sarah Edo
              </span>
            </li>
            <li
              class="nav-item"
            >
              <span
                class="nav-link link-light logout"
              >
                Logout
              </span>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <div
      class="container"
    >
      <div
        class="text-center mt-5"
      >
        <h1>
          404
        </h1>
        <p
          class="lead"
        >
          Page not found
        </p>
        <button
          class="btn btn-primary"
        >
          Go Back Home
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Not found raised when the address doesn't exist (without authedUser) should match the snapshot 1`] = `
<div>
  <div />
  <div>
    <nav
      class="navbar navbar-expand-lg bg-primary"
      data-testid="menu"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand link-light"
          href="/"
        >
          Employee Polls
        </a>
        <div
          class="collapse navbar-collapse"
          id="navbarText"
        >
          <ul
            class="navbar-nav me-auto mb-2 mb-lg-0"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link active link-light"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link link-light"
                href="/leaderboard"
              >
                Leaderboard
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link link-light"
                href="/add"
              >
                Add question
              </a>
            </li>
          </ul>
          <ul
            class="navbar-nav mb-2 mb-lg-0"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link link-light"
                href="/login"
              >
                Login
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <div
      class="container"
    >
      <div
        class="text-center mt-5"
      >
        <h1>
          404
        </h1>
        <p
          class="lead"
        >
          Page not found
        </p>
        <button
          class="btn btn-primary"
        >
          Go Back Home
        </button>
      </div>
    </div>
  </div>
</div>
`;
